Revert "save button z-index fixed"
This reverts commit b5398c4b5ac020550084f03ad0cb1435bbd878e8.

--- a/src/editor/components/sidebar/styles.scss
+++ b/src/editor/components/sidebar/styles.scss
@@ -10,7 +10,7 @@
   right: 0;
   top: 0;
   width: $sidebar-width;
-  z-index: 10000;
+  z-index: z-index(".edit-site-sidebar");
 
   @include break-small() {
 	-webkit-overflow-scrolling: touch;
